unpackaged/main/default/objects/pse__Missing_Timecard__c/fields/pse__Include_Sublevels__c.field-meta.xml
<CustomField>
    <fullName>pse__Include_Sublevels__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether to calculate Missing Timecard for all sub levels of the selected region, practice, or group. This field is ignored if Missing TImecard is calculated only for a resource.</inlineHelpText>
    <label>Include Sublevels</label>
    <type>Checkbox</type>
</CustomField>