unpackaged/main/default/objects/pse__Missing_Timecard__c/fields/pse__Missing_Timecard_Calculation__c.field-meta.xml
<CustomField>
    <fullName>pse__Missing_Timecard_Calculation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Missing Timecard Calculation</label>
    <referenceTo>pse__Missing_Timecard_Calculation__c</referenceTo>
    <relationshipLabel>Missing Timecards</relationshipLabel>
    <relationshipName>Missing_Timecards</relationshipName>
    <type>Lookup</type>
</CustomField>