unpackaged/main/default/objects/pse__Missing_Timecard__c/fields/pse__Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Missing Timecards</relationshipLabel>
    <relationshipName>Missing_Timecards</relationshipName>
    <type>Lookup</type>
</CustomField>