unpackaged/main/default/objects/pse__Missing_Timecard__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Date_Timecard_Entered__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>pse__Include_Sublevels__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Resource__c</field>
        <operation>contains</operation>
        <value>Collins</value>
    </filters>
    <label>All</label>
</ListView>